--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Calmcl1.GitHub.io by calmcl1</title>
+    <title>Cal McLean - on GitHub!</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Calmcl1.GitHub.io</h1>
-          <h2></h2>
+          <h1>Cal McLean - on GitHub!</h1>
+          <h2><a href="//github.com/calmcl1">@calmcl1</a></h2>
         </header>
 
         <section id="downloads" class="clearfix">
