--- a/chronicletest.html
+++ b/chronicletest.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Chronicle-test</title>
-    <link rel="stylesheet" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
