fixed script import

--- a/chronicletest.html
+++ b/chronicletest.html
@@ -5,7 +5,7 @@
     <title>Chronicle-test</title>
     <link rel="stylesheet" href="stylesheets/minimal.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width">
+    <!--<meta name="viewport" content="width=device-width">-->
     <!--[if lt IE 9]>
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -147,18 +147,26 @@ Where:
                 <dd>
                     <a href="//github.com/calmcl1/chronicle/issues/11">Possibly</a>. Though, for the same reason, it will probably be part of a different executable that Chronicle-the-logger can take advantage of.
                 </dd>
-                
+                <dt>So Chronicle isn't going to be just one bit of software?</dt>
+                <dd>
+                    I can see Chronicle becoming a suite &emdash; with a UI module, a web-stream-as-virtual-hardware-interface module amongst others. This separation of responsibility keeps development simple, the risk involved with adding new features low, and the likelihood of breaking Chronicle by changing something simple also low.
+                </dd>
+                <dt>I've got a great idea for Chronicle! Or, Chronicle doesn't work!</dt>
+                <dd>
+                    Righto - <a href="//github.com/calmcl1/chronicle/issues">add it to the list</a>.
+                </dd>
+                <dt>Can I get in touch with the developer?</dt>
+                <dd>
+                    Of course! Tweet me <a href="//twitter.com/cal_mclean">@cal_mclean</a> Email me at <a href="mailto://mail@callum-mclean.co.uk">mail@callum-mclean.co.uk</a>.
+                </dd>
 
             </dl>
             </p>
-
-
-
     </section>
     <footer>
         <p>This is the footer</p>
     </footer>
-    <script lang="js" href="javascripts/scale.fix.js" />
+    <script lang="js" src="javascripts/scale.fix.js" />
 </body>
 
 </html>
