blockquote goes in a p

--- a/chronicletest.html
+++ b/chronicletest.html
@@ -45,14 +45,15 @@
                 The latest version (<strong>v0.1.2bX</strong>) is stable enough for production use (and is currently running
                 in a production environment,) but the odd niggle here and there means I'm still calling it <em>>beta</em>                for now.
             </p>
-
-            <blockquote>
-                If you find Chronicle to be useful, maybe buy me a coffee? I'm on <a href="https://flattr.com/submit/auto?fid=kzr39z&url=http%3A%2F%2Fgithub.com%2Fcalmcl1%2Fchronicle">Flattr</a>                and <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FXDR44PHGFEDN"> PayPal</a>!
-            </blockquote>
+            <p>
+                <blockquote>
+                    If you find Chronicle to be useful, maybe buy me a coffee? I'm on <a href="https://flattr.com/submit/auto?fid=kzr39z&url=http%3A%2F%2Fgithub.com%2Fcalmcl1%2Fchronicle">Flattr</a> and <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FXDR44PHGFEDN"> PayPal</a>!
+                </blockquote>
+            </p>
 
             <h2>Windows Users</h2>
             <p>
-                Download binaries for <a href="//github.com/calmcl1/chronicle/releases">>x32 and x64</a>. Nice and easy!
+                Download binaries for <a href="//github.com/calmcl1/chronicle/releases">x32 and x64</a>. Nice and easy!
             </p>
 
             <h2>Linux Users</h2>
@@ -134,33 +135,40 @@ Where:
             <p>
                 Does Chronicle not work the way you expected, or do you have an idea to make Chronicle even more useful?
             </p>
-            <p>Head over the the <a href="//github.com/calmcl1/chronicle/issues">GitHub Issues</a> and log a new request! Or, those who fancy diving straight in can fork the repo and submit a pull request
+            <p>Head over the the <a href="//github.com/calmcl1/chronicle/issues">GitHub Issues</a> and log a new request! Or,
+                those who fancy diving straight in can fork the repo and submit a pull request
             </p>
             <h1>FAQ</h1>
             <p>
-            <dl>
-                <dt>Will Chronicle have a GUI?</dt>
-                <dd>
-                    <a href="//github.com/calmcl1/chronicle/issues/17">Probably</a>. However, in order to stop the software growing beyond a reasonable scope, it'll probably be introduced as a separate bit of software that will *talk* to Chronicle. This will allow for quick feature development on both the UI side and core recording side without risking one breaking the other.
-                </dd>
-                <dt>Can Chronicle record web streams?</dt>
-                <dd>
-                    <a href="//github.com/calmcl1/chronicle/issues/11">Possibly</a>. Though, for the same reason, it will probably be part of a different executable that Chronicle-the-logger can take advantage of.
-                </dd>
-                <dt>So Chronicle isn't going to be just one bit of software?</dt>
-                <dd>
-                    I can see Chronicle becoming a suite &emdash; with a UI module, a web-stream-as-virtual-hardware-interface module amongst others. This separation of responsibility keeps development simple, the risk involved with adding new features low, and the likelihood of breaking Chronicle by changing something simple also low.
-                </dd>
-                <dt>I've got a great idea for Chronicle! Or, Chronicle doesn't work!</dt>
-                <dd>
-                    Righto - <a href="//github.com/calmcl1/chronicle/issues">add it to the list</a>.
-                </dd>
-                <dt>Can I get in touch with the developer?</dt>
-                <dd>
-                    Of course! Tweet me <a href="//twitter.com/cal_mclean">@cal_mclean</a> Email me at <a href="mailto://mail@callum-mclean.co.uk">mail@callum-mclean.co.uk</a>.
-                </dd>
+                <dl>
+                    <dt>Will Chronicle have a GUI?</dt>
+                    <dd>
+                        <a href="//github.com/calmcl1/chronicle/issues/17">Probably</a>. However, in order to stop the software
+                        growing beyond a reasonable scope, it'll probably be introduced as a separate bit of software that
+                        will *talk* to Chronicle. This will allow for quick feature development on both the UI side and core
+                        recording side without risking one breaking the other.
+                    </dd>
+                    <dt>Can Chronicle record web streams?</dt>
+                    <dd>
+                        <a href="//github.com/calmcl1/chronicle/issues/11">Possibly</a>. Though, for the same reason, it
+                        will probably be part of a different executable that Chronicle-the-logger can take advantage of.
+                    </dd>
+                    <dt>So Chronicle isn't going to be just one bit of software?</dt>
+                    <dd>
+                        I can see Chronicle becoming a suite &emdash; with a UI module, a web-stream-as-virtual-hardware-interface module amongst
+                        others. This separation of responsibility keeps development simple, the risk involved with adding
+                        new features low, and the likelihood of breaking Chronicle by changing something simple also low.
+                    </dd>
+                    <dt>I've got a great idea for Chronicle! Or, Chronicle doesn't work!</dt>
+                    <dd>
+                        Righto - <a href="//github.com/calmcl1/chronicle/issues">add it to the list</a>.
+                    </dd>
+                    <dt>Can I get in touch with the developer?</dt>
+                    <dd>
+                        Of course! Tweet me <a href="//twitter.com/cal_mclean">@cal_mclean</a> Email me at <a href="mailto://mail@callum-mclean.co.uk">mail@callum-mclean.co.uk</a>.
+                    </dd>
 
-            </dl>
+                </dl>
             </p>
     </section>
     <footer>
