--- a/chronicletest.html
+++ b/chronicletest.html
@@ -44,7 +44,8 @@
                 <h1>Get Chronicle</h1>
                 <p>
                     The latest version (<strong>v0.1.2bX</strong>) is stable enough for production use (and is currently
-                    running in a production environment,) but the odd niggle here and there means I'm still calling it <em>>beta</em>                    for now.
+                    running in a production environment,) but the odd niggle here and there means I'm still calling it <em>beta</em>for
+                    now.
                 </p>
                 <p>
                     <blockquote>
