--- a/chronicletest.html
+++ b/chronicletest.html
@@ -16,6 +16,16 @@
         <header>
             <h1>Chronicle</h1>
             <p>Chronicle is an audio logger intended for ROT logging.</p>
+            <p class="view">
+                <a href="//github.com/calmcl1/github">Find Chronicle on GitHub
+                <small>calmcl1/chronicle</small></a>
+            </p>
+            <ul>
+                <li><a href="https://github.com/calmcl1/chronicle/zipball/master">Download
+                <strong>ZIP File</strong></a></li>
+                <li><a href="https://github.com/calmcl1/chronicle/tarball/master">Download
+                <strong>TAR Ball</strong></a></li>
+            </ul>
         </header>
         <section>
             <h1>About Chronicle</h2>
@@ -65,37 +75,30 @@
                     you will need to install the following pre-requisites:
                 </p>
                 <ul>
-                    <li>RtAudio (
-                        <pre><code>librtaudio-dev</code></pre>)</li>
-                    <li>libsndfile (
-                        <pre><code>libsndfile1-dev</code></pre>)</li>
-                    <li>Boost (
-                        <pre><code>libboost-all-dev</code></pre>)</li>
-                    <li>RtAudio (
-                        <pre><code>librtaudio-dev</code></pre>)</li>
+                    <li>RtAudio (<code>librtaudio-dev</code>)</li>
+                    <li>libsndfile (<code>libsndfile1-dev</code>)</li>
+                    <li>Boost (<code>libboost-all-dev</code>)</li>
+                    <li>RtAudio (<code>librtaudio-dev</code>)</li>
                 </ul>
 
                 <h3>Compiling from scratch</h3>
                 <p>
                     Or, you can compile Chronicle from scratch.<br /> You'll also need the build toolchain:
-                    <pre><code>build-essential</code></pre> and
-                    <pre><code>pkg-config</code></pre>.<br /> Then, <a href="//github.com/calmcl1/chronicle/releases">download the source tarball</a> and run
-                    <pre><code>make linux</code></pre>.
+                    <code>build-essential</code> and <code>pkg-config</code>.<br /> Then, <a href="//github.com/calmcl1/chronicle/releases">download the source tarball</a>                    and run <code>make linux</code>
                 </p>
                 <p>
-                    The built binary will exist in
-                    <pre><code>(srcdir)/build/linux</code></pre>.
+                    The built binary will exist in <code>(srcdir)/build/linux</code>.
                 </p>
                 <p>
-                    I'm working on getting
-                    <pre><code>.deb</code></pre>s built!
+                    I'm working on getting <code>.deb</code>s built!
                 </p>
 
                 <h1>Using Chronicle</h1>
                 <p>
                     To start using Chronicle to record hourly to the local directory using the default audio device, just run:
                     <br />
-                    <pre><code>$ chronicle</code></pre><br /> No configuration needed!
+                    <pre><code>$ chronicle</code><br />
+                    No configuration needed!
                 </p>
                 <p>
                     However, to configure Chronicle more to your liking, use the following options:
@@ -120,7 +123,7 @@ Where:
                              numbers can be obtained with `chronicle -l`.
                              If unspecified, the system default audio recording device will be used.
     -a | --max-age       Sets the maximum age (in seconds) before audio files will be automatically deleted.
-                             Defaults to 3600000 (1000 hours, in accordance with OFCOM rules).
+                             Defaults to 3628800 (42 days, in accordance with OFCOM rules).
     --no-delete          If passed, Chronicle will not delete old audio files, so they can be manually managed.
 		                     Incompatible with --max-age.
     -s | --audio-format Sets the audio format to use for the recorded audio files.
@@ -129,54 +132,54 @@ Where:
                                  WAV | 16-bit PCM WAV (.wav)
                              Defaults to WAV.
             </pre>
-                <p>
-                    Read the <a href="//github.com/calmcl1/chronicle#chronicle">README</a> for more info.
-                </p>
+                    <p>
+                        Read the <a href="//github.com/calmcl1/chronicle#chronicle">README</a> for more info.
+                    </p>
 
-                <h1>Making Chronicle Better</h1>
-                <p>
-                    Does Chronicle not work the way you expected, or do you have an idea to make Chronicle even more useful?
-                </p>
-                <p>Head over the the <a href="//github.com/calmcl1/chronicle/issues">GitHub Issues</a> and log a new request!
-                    Or, those who fancy diving straight in can fork the repo and submit a pull request
-                </p>
-                <h1>FAQ</h1>
-                <p>
-                    <dl>
-                        <dt>Will Chronicle have a GUI?</dt>
-                        <dd>
-                            <a href="//github.com/calmcl1/chronicle/issues/17">Probably</a>. However, in order to stop the
-                            software growing beyond a reasonable scope, it'll probably be introduced as a separate bit of
-                            software that will *talk* to Chronicle. This will allow for quick feature development on both
-                            the UI side and core recording side without risking one breaking the other.
-                        </dd>
-                        <dt>Can Chronicle record web streams?</dt>
-                        <dd>
-                            <a href="//github.com/calmcl1/chronicle/issues/11">Possibly</a>. Though, for the same reason,
-                            it will probably be part of a different executable that Chronicle-the-logger can take advantage
-                            of.
-                        </dd>
-                        <dt>So Chronicle isn't going to be just one bit of software?</dt>
-                        <dd>
-                            I can see Chronicle becoming a suite &emdash; with a UI module, a web-stream-as-virtual-hardware-interface module amongst
-                            others. This separation of responsibility keeps development simple, the risk involved with adding
-                            new features low, and the likelihood of breaking Chronicle by changing something simple also
-                            low.
-                        </dd>
-                        <dt>I've got a great idea for Chronicle! Or, Chronicle doesn't work!</dt>
-                        <dd>
-                            Righto - <a href="//github.com/calmcl1/chronicle/issues">add it to the list</a>.
-                        </dd>
-                        <dt>Can I get in touch with the developer?</dt>
-                        <dd>
-                            Of course! Tweet me <a href="//twitter.com/cal_mclean">@cal_mclean</a> Email me at <a href="mailto://mail@callum-mclean.co.uk">mail@callum-mclean.co.uk</a>.
-                        </dd>
+                    <h1>Making Chronicle Better</h1>
+                    <p>
+                        Does Chronicle not work the way you expected, or do you have an idea to make Chronicle even more useful?
+                    </p>
+                    <p>Head over the the <a href="//github.com/calmcl1/chronicle/issues">GitHub Issues</a> and log a new request!
+                        Or, those who fancy diving straight in can fork the repo and submit a pull request
+                    </p>
+                    <h1>FAQ</h1>
+                    <p>
+                        <dl>
+                            <dt>Will Chronicle have a GUI?</dt>
+                            <dd>
+                                <a href="//github.com/calmcl1/chronicle/issues/17">Probably</a>. However, in order to stop
+                                the software growing beyond a reasonable scope, it'll probably be introduced as a separate
+                                bit of software that will *talk* to Chronicle. This will allow for quick feature development
+                                on both the UI side and core recording side without risking one breaking the other.
+                            </dd>
+                            <dt>Can Chronicle record web streams?</dt>
+                            <dd>
+                                <a href="//github.com/calmcl1/chronicle/issues/11">Possibly</a>. Though, for the same reason,
+                                it will probably be part of a different executable that Chronicle-the-logger can take advantage
+                                of.
+                            </dd>
+                            <dt>So Chronicle isn't going to be just one bit of software?</dt>
+                            <dd>
+                                I can see Chronicle becoming a suite &emdash; with a UI module, a web-stream-as-virtual-hardware-interface module amongst
+                                others. This separation of responsibility keeps development simple, the risk involved with
+                                adding new features low, and the likelihood of breaking Chronicle by changing something simple
+                                also low.
+                            </dd>
+                            <dt>I've got a great idea for Chronicle! Or, Chronicle doesn't work!</dt>
+                            <dd>
+                                Righto - <a href="//github.com/calmcl1/chronicle/issues">add it to the list</a>.
+                            </dd>
+                            <dt>Can I get in touch with the developer?</dt>
+                            <dd>
+                                Of course! Tweet me <a href="//twitter.com/cal_mclean">@cal_mclean</a> Email me at <a href="mailto://mail@callum-mclean.co.uk">mail@callum-mclean.co.uk</a>.
+                            </dd>
 
-                    </dl>
-                </p>
+                        </dl>
+                    </p>
         </section>
         <footer>
-            <p>This is the footer</p>
+            <p>Chronicle is maintained by <a href="//calmcl.github.io">Cal McLean</a></p>
         </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
