--- a/chronicletest.html
+++ b/chronicletest.html
@@ -97,7 +97,7 @@
                 <p>
                     To start using Chronicle to record hourly to the local directory using the default audio device, just run:
                     <br />
-                    <code>$ chronicle</code><br />
+                    <pre><code>$ chronicle</code></pre>
                     No configuration needed!
                 </p>
                 <p>
