i had the sillies

--- a/chronicletest.html
+++ b/chronicletest.html
@@ -17,7 +17,7 @@
             <h1>Chronicle</h1>
             <p>Chronicle is an audio logger intended for ROT logging.</p>
             <p class="view">
-                <a href="//github.com/calmcl1/github">Find Chronicle on GitHub
+                <a href="//github.com/calmcl1/chronicle">Find Chronicle on GitHub
                 <small>calmcl1/chronicle</small></a>
             </p>
             <ul>
