that's not my name

--- a/chronicletest.html
+++ b/chronicletest.html
@@ -179,7 +179,7 @@ Where:
                     </p>
         </section>
         <footer>
-            <p>Chronicle is maintained by <a href="//calmcl.github.io">Cal McLean</a></p>
+            <p>Chronicle is maintained by <a href="//calmcll.github.io">Cal McLean</a></p>
         </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
