--- a/chronicle.html
+++ b/chronicle.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Chronicle-test</title>
+    <title>Chronicle</title>
     <link rel="stylesheet" href="stylesheets/minimal.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <!--<meta name="viewport" content="width=device-width">-->
