updated deps list

--- a/chronicle.html
+++ b/chronicle.html
@@ -78,7 +78,7 @@
                     <li>RtAudio (<code>librtaudio-dev</code>)</li>
                     <li>libsndfile (<code>libsndfile1-dev</code>)</li>
                     <li>Boost (<code>libboost-all-dev</code>)</li>
-                    <li>RtAudio (<code>librtaudio-dev</code>)</li>
+                    <li>nCurses (<code>libncurses5-dev</code>)</li>
                 </ul>
 
                 <h3>Compiling from scratch</h3>
