love that coffee, man

--- a/chronicle.html
+++ b/chronicle.html
@@ -25,6 +25,8 @@
                 <strong>ZIP File</strong></a></li>
                 <li><a href="https://github.com/calmcl1/chronicle/tarball/master">Download
                 <strong>TAR Ball</strong></a></li>
+                <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FXDR44PHGFEDN">Donate
+                <strong>On PayPal</strong></a></li>
             </ul>
         </header>
         <section>
