updated version no.

--- a/chronicle.html
+++ b/chronicle.html
@@ -55,9 +55,8 @@
 
                 <h1>Get Chronicle</h1>
                 <p>
-                    The latest version (<strong>v0.1.2bX</strong>) is stable enough for production use (and is currently
-                    running in a production environment,) but the odd niggle here and there means I'm still calling it <em>beta</em>for
-                    now.
+                    The latest version (<strong>v0.1.2</strong>) is stable enough for production use (and is currently
+                    running in a production environment at Halton Community Radio, amongst others). Are you using Chronicle? <a href="https://twitter.com/cal_mclean">Give me a shout!</a>
                 </p>
                 <p>
                     <blockquote>
@@ -86,7 +85,7 @@
                 <h3>Compiling from scratch</h3>
                 <p>
                     Or, you can compile Chronicle from scratch.<br /> You'll also need the build toolchain:
-                    <code>build-essential</code> and <code>pkg-config</code>.<br /> Then, <a href="//github.com/calmcl1/chronicle/releases">download the source tarball</a>                    and run <code>make linux</code>
+                    <code>build-essential</code> and <code>pkg-config</code>.<br /> Then, <a href="//github.com/calmcl1/chronicle/releases">download the source tarball</a> and run <code>make linux</code>
                 </p>
                 <p>
                     The built binary will exist in <code>(srcdir)/build/linux</code>.
